# geant4-cr

./: .gitignore  CMakeLists.txt  ger.sh  run05.mac  run1.mac  run10.mac  run5.mac  run_all..sh  run_all.sh  sim.cc  vis.mac
include/: DetConstruct.hh  DetectorMessenger.hh  PhSp1Hit.hh  PhSp1SD.hh  RunAction.hh  action.hh  generator.hh  stepping.hh
results_Air/: RC_Air_s10_Air_s10_t24.hit
results_CH4/: RC_CH4_s10_CH4_s10_t24.hit
scripts/: gammaonly.hit  script.py
simulation_results_20250513_003444/E10GeV/Air/: RC_E10_Air_s10_Air_s10_t24.hit
simulation_results_20250513_003444/E10GeV/CH4/: RC_E10_CH4_s10_CH4_s10_t24.hit
simulation_results_20250513_112806/: Air-5-10.hit_Air_s10_t24.hit  CH4-10-10.hit_CH4_s10_t24.hit  CH4-5-10.hit_CH4_s10_t24.hit
simulation_results_20250513_114129/: Air-10-10.hit_Air_s10_t24.hit  Air-5-10.hit_Air_s10_t24.hit  CH4-10-10.hit_CH4_s10_t24.hit  CH4-5-10.hit_CH4_s10_t24.hit
simulation_results_20250513_115132/: Air-1-10.hit  Air-10-10.hit  Air-5-10.hit  CH4-1-10.hit  CH4-10-10.hit  CH4-5-10.hit  CO2-1-10.hit  CO2-10-10.hit  CO2-5-10.hit
simulation_results_20250513_130707/: Air-10-10.hit  CH4-10-10.hit  CH4-5-10.hit  CO2-10-10.hit  CO2-5-10.hit
simulation_results_20250513_221448/: Air-0.5-10.hit  Air-1-10.hit  Air-10-10.hit  Air-5-10.hit  CH4-0.5-10.hit  CH4-1-10.hit  CH4-10-10.hit  CH4-5-10.hit  CO2-0.5-10.hit  CO2-1-10.hit  CO2-10-10.hit  CO2-5-10.hit
src/: DetConstruct.cc  DetectorMessenger.cc  PhSp1Hit.cc  PhSp1SD.cc  RunAction.cc  action.cc  generator.cc
(+2 files in other folders)
